--- a/project.yml
+++ b/project.yml
@@ -20,7 +20,7 @@ targets:
     settings:
       base:
         PRODUCT_NAME: $TARGET_NAME
-        PRODUCT_BUNDLE_IDENTIFIER: com.github.droibit.sample.${PRODUCT_NAME}
+        PRODUCT_BUNDLE_IDENTIFIER: com.hiroakiapp.MyTemplateiOSApp
         MARKETING_VERSION: 1.0.0
         CURRENT_PROJECT_VERSION: 1
         ENABLE_PREVIEWS: true
@@ -49,6 +49,26 @@ targets:
           else
             echo "warning: SwiftLint not installed, download from https://github.com/realm/SwiftLint"
           fi
+  MyTemplateiOSAppTests:
+    type: bundle.unit-test
+    platform: iOS
+    sources:
+      - MyTemplateiOSAppTests
+    dependencies:
+      - target: MyTemplateiOSApp
+    settings:
+      base:
+        ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
+  MyTemplateiOSAppUITests:
+    type: bundle.ui-testing
+    platform: iOS
+    sources:
+      - MyTemplateiOSAppUITests
+    dependencies:
+      - target: MyTemplateiOSApp
+    settings:
+      base:
+        ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
 
 schemes:
   MyTemplateiOSApp:
