--- a/project.yml
+++ b/project.yml
@@ -3,35 +3,43 @@ options:
   xcodeVersion: "15.2"
   deploymentTarget:
     iOS: "17.0"
-  developmentLanguage: en
 
 settings:
   base:
-    SWIFT_VERSION: 5.0
+    DEVELOPMENT_TEAM: SAITO HIROAKI
+    MARKETING_VERSION: 1.0.0
+    CURRENT_PROJECT_VERSION: 1
+    CODE_SIGN_STYLE: Automatic
 
 targets:
   MyTemplateiOSApp:
     type: application
     platform: iOS
-    settings:
-      base:
-        PRODUCT_NAME: $TARGET_NAME
-        PRODUCT_BUNDLE_IDENTIFIER: com.hiroakiapp.MyTemplateiOSApp
-        MARKETING_VERSION: 1.0.0
-        CURRENT_PROJECT_VERSION: 1
-        ENABLE_PREVIEWS: true
-        GENERATE_INFOPLIST_FILE: true
-        ENABLE_USER_SCRIPT_SANDBOXING: false
-        INFOPLIST_KEY_CFBundleDisplayName: ${PRODUCT_NAME}
-        INFOPLIST_KEY_UILaunchStoryboardName: LaunchScreen.storyboard
-        INFOPLIST_KEY_UISupportedInterfaceOrientations:
-          - UIInterfaceOrientationPortrait
     sources:
       - path: MyTemplateiOSApp
+    options:
+        bundleIdPrefix: com.mothule
+    settings:
+      base:
+        ENABLE_PREVIEWS: YES
+        DEVELOPMENT_ASSET_PATHS: "\"MyTemplateiOSApp/Preview Content\""
+        ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME: AccentColor
+    info:
+      # 生成先のPathを指定する
+      path: MyTemplateiOSApp/Info.plist
+      # 各種設定は基本的にXcode 13.1のテンプレートから作成したものとあわせる
+      properties:
+        CFBundleVersion: $(CURRENT_PROJECT_VERSION)
+        CFBundleShortVersionString: $(MARKETING_VERSION)
+        LSRequiresIPhoneOS: YES
+        UILaunchScreen: ""
+        UIApplicationSupportsIndirectInputEvents: YES
+        UIApplicationSceneManifest:
+          UIApplicationSupportsMultipleScenes: YES
+        UISupportedInterfaceOrientations~iphone:
+          [UIInterfaceOrientationPortrait, UIInterfaceOrientationLandscapeLeft, UIInterfaceOrientationLandscapeRight]
     dependencies:
-      - package: MyTemplateiOSApp
-        products:
-          - App
+      - target: MyTemplateiOSApp
     postBuildScripts:
       - name: Run SwiftLint
         path: /bin/sh
