--- a/project.yml
+++ b/project.yml
@@ -6,8 +6,8 @@ options:
 
 settings:
   base:
-    PRODUCT_BUNDLE_IDENTIFIER: com.hiroakiapp
-    DEVELOPMENT_TEAM: SAITO HIROAKI
+    PRODUCT_BUNDLE_IDENTIFIER: com.hiroakiapp.MyTemplateiOSApp
+    DEVELOPMENT_TEAM: Saito Hiroaki (Personal Team)
     MARKETING_VERSION: 1.0.0
     CURRENT_PROJECT_VERSION: 1
     CODE_SIGN_STYLE: Automatic
@@ -18,17 +18,13 @@ targets:
     platform: iOS
     sources:
       - path: MyTemplateiOSApp
-    options:
-        bundleIdPrefix: com.hiroakiapp
     settings:
       base:
         ENABLE_PREVIEWS: YES
         DEVELOPMENT_ASSET_PATHS: "\"MyTemplateiOSApp/Preview Content\""
         ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME: AccentColor
     info:
-      # 生成先のPathを指定する
       path: MyTemplateiOSApp/Info.plist
-      # 各種設定は基本的にXcode 13.1のテンプレートから作成したものとあわせる
       properties:
         CFBundleVersion: $(CURRENT_PROJECT_VERSION)
         CFBundleShortVersionString: $(MARKETING_VERSION)
@@ -74,19 +70,3 @@ targets:
     settings:
       base:
         ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES: YES
-
-schemes:
-  MyTemplateiOSApp:
-    build:
-      targets:
-        MyTemplateiOSApp: all
-    run:
-      config: Debug
-    test:
-      config: Debug
-    profile:
-      config: Debug
-    analyze:
-      config: Debug
-    archive:
-      config: Debug
