--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -18,7 +18,7 @@ jobs:
       - run: sudo xcode-select -s '/Applications/Xcode15.1.app/Contents/Developer'
       - run: xcodebuild -version
       - run: bundle install
-      - run: bundle exec fastlane hello_fastlane
+      - run: bundle exec fastlane test
     steps:
       - uses: actions/checkout@v3
       - name: Danger
