--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,9 +19,7 @@ jobs:
       - run: xcodebuild -version
       - run: bundle install
       - run: bundle exec fastlane test
-
-    steps:
-      - uses: actions/checkout@v3
+      # danger
       - name: Danger
         uses: 417-72KI/danger-swiftlint@v5.9 # Xcode15系
         env:
