--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set Default Scheme
-      - run: sudo xcode-select -s '/Applications/Xcode15.1.app/Contents/Developer'
-      - run: xcodebuild -version
-      - run: bundle install
-      - run: bundle exec fastlane test
+        run: sudo xcode-select -s '/Applications/Xcode15.1.app/Contents/Developer'
+        run: xcodebuild -version
+        run: bundle install
+        run: bundle exec fastlane test
