--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,10 +19,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set Default Scheme
-        run: sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
-      - name: Show Xcode version
-        run: xcodebuild -version
+#      - name: Set Default Scheme
+#        run: sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
+#      - name: Show Xcode version
+#        run: xcodebuild -version
       - name: Cache Gems
         uses: actions/cache@v2
         with:
