--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,10 +19,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Use Xcode 15.1
-        uses: actions/setup-xcode@v2
-        with:
-          xcode-version: 15.1
+      - name: install xcode-select
+        run: sudo xcode-select --install
+      - name: Set Default Scheme
+        run: sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
       - name: Cache Gems
         uses: actions/cache@v2
         with:
