--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,15 +12,13 @@ env:
 jobs:
   build:
     name: Build and Test default scheme using any available iPhone simulator
-    runs-on: macos-latest
+    runs-on: macos-13
     env:
       MINT_PATH: mint/lib
       MINT_LINK_PATH: mint/bin
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: install xcode-select
-        run: sudo xcode-select --install
       - name: Set Default Scheme
         run: sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
       - name: Cache Gems
