--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -1,9 +1,9 @@
-name: Danger
+name: Run-Danger
+
 on:
   pull_request:
     branches:
       - '**'
-      - '!main'
 jobs:
   danger:
     runs-on: ubuntu-latest
