--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Danger
         uses: 417-72KI/danger-swiftlint@v5.9 # Xcode15系
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }} # github token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # github token
 
