--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -4,6 +4,13 @@ on:
   pull_request:
     branches:
       - '**'
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  statuses: write
+
 jobs:
   danger:
     runs-on: ubuntu-latest
