--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -5,6 +5,15 @@ on:
     branches:
       - '**'
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  statuses: write
+
+jobs:
+  danger:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Setup Ruby
@@ -28,3 +37,4 @@ on:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           bundle exec danger
+
