--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -34,6 +34,8 @@ jobs:
             bundle install --jobs 4 --retry 3
       - name: Install Mint
         run: brew install mint
+      - name: Build Env Setting
+        run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool true
       - name: Cache Mint packages
         uses: actions/cache@v2
         with:
