--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -18,11 +18,11 @@ jobs:
       MINT_LINK_PATH: mint/bin
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set Default Scheme
         run: sudo xcode-select -s '/Applications/Xcode_15.1.app/Contents/Developer'
       - name: Cache Gems
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
@@ -34,10 +34,18 @@ jobs:
             bundle install --jobs 4 --retry 3
       - name: Install Mint
         run: brew install mint
+      # Mintで管理しているライブラリのキャッシュ
+      - name: Cache Mint packages
+        uses: actions/cache@v4
+        with:
+          path: mint
+          key: ${{ runner.os }}-mint-${{ hashFiles('**/Mintfile') }}
+          restore-keys: |
+            ${{ runner.os }}-mint-
       - name: Build Env Setting
         run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool true
       - name: Cache Mint packages
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: mint
           key: ${{ runner.os }}-mint-${{ hashFiles('**/Mintfile') }}
