--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -42,6 +42,8 @@ jobs:
           key: ${{ runner.os }}-mint-${{ hashFiles('**/Mintfile') }}
           restore-keys: |
             ${{ runner.os }}-mint-
+      - name: Build Macro Setting
+        run: defaults write com.apple.dt.Xcode IDESkipMacroFingerprintValidation -bool YES
       - name: Build Env Setting
         run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool true
       - name: Cache Mint packages
